# bfcp

./: .gitignore  CMakeLists.txt  License  README.md  bfcp.sln  build.sh
bfcp/: CMakeLists.txt  bfcp.vcxproj  bfcp.vcxproj.filters
bfcp/client/: base_client.cpp  base_client.h  bfcp_client.cpp  bfcp_client.h
bfcp/common/: bfcp_attr.cpp  bfcp_attr.h  bfcp_buf_pool.h  bfcp_callbacks.h  bfcp_conn.cpp  bfcp_conn.h  bfcp_ctrans.cpp  bfcp_ctrans.h  bfcp_ex.h  bfcp_mbuf_wrapper.h  bfcp_msg.cpp  bfcp_msg.h  bfcp_msg_build.cpp  bfcp_msg_build.h  bfcp_param.cpp  bfcp_param.h
bfcp/common/utility/: SpinLock.h
bfcp/server/: base_server.cpp  base_server.h  bfcp_conference.cpp  bfcp_conference.h  bfcp_floor.h  bfcp_server.cpp  bfcp_server.h  bfcp_user.h  conference.cpp  conference.h  conference_define.h  floor.h  floor_manager.cpp  floor_manager.h  floor_request_node.cpp  floor_request_node.h  message_queue.h  task_queue.cpp  task_queue.h  thread_pool.cpp  thread_pool.h  user.cpp  user.h  user_manager.cpp  user_manager.h
bfcp_client/: CMakeLists.txt  bfcp_client.cpp  bfcp_client.h  bfcp_client.vcxproj  bfcp_client.vcxproj.filters  main.cpp
bfcp_server/: CMakeLists.txt  bfcp_conference.cpp  bfcp_conference.h  bfcp_floor.h  bfcp_server.cpp  bfcp_server.h  bfcp_server.vcxproj  bfcp_server.vcxproj.filters  bfcp_user.h  main.cpp
bfcp_server_soap/: BFCPService.nsmap  BFCPService.wsdl  BfcpService.cpp  BfcpService.h  CMakeLists.txt  basename.cpp  bfcp_server_soap.vcxproj  bfcp_server_soap.vcxproj.filters  generate.bat  main.cpp  ns.xsd  server.h  soapBFCPServiceService.cpp  soapBFCPServiceService.h  soapC.cpp  soapH.h  soapStub.h
common/: BfcpMsg.h  MemoryPool.h  bfcp_attr.cpp  bfcp_attr.h  bfcp_buf_pool.h  bfcp_build_param.h  bfcp_callbacks.h  bfcp_conn.cpp  bfcp_conn.h  bfcp_ctrans.cpp  bfcp_ctrans.h  bfcp_ex.h  bfcp_mbuf_wrapper.h  bfcp_msg.cpp  bfcp_msg.h  bfcp_msg_build.cpp  bfcp_msg_build.h  bfcp_msg_builder.cpp  bfcp_msg_builder.h  bfcp_param.cpp  bfcp_param.h
server_soap_test/: BFCPService.wsdl  CMakeLists.txt  generate.bat  main.cpp  ns.xsd  server.h  server_soap_test.vcxproj  server_soap_test.vcxproj.filters  soapBFCPServiceProxy.cpp  soapBFCPServiceProxy.h  soapC.cpp  soapH.h  soapStub.h
